# layered_architecture

./: pyproject.toml
.github/workflows/: ci.yml
app/: .env  mypy.ini
app/src/core/: jwt_auth.py
app/src/services/: report_service.py
