[project]
name = "layered-architecture"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladyslav Levkovich",email = "levkovich.vlad.2004@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "beanie (>=2.0.0,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "flake8-pyproject (>=1.2.3,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "W503",
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "alembic",
    "script.py",
]
per-file-ignores = [
    "__init__.py:F401",
]
show-source = true

[tool.mypy]
python_version = 3.11
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

files = ["app/"]

strict = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true

ignore_missing_imports = true
follow_imports = "silent"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
venv/
'''
[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["alembic", "venv", ".venv"]
